--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,45 @@
-version: '3.3'
+version: '3.8'
 services:
-
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - dbdata:/var/lib/postgresql/data/
+    restart: always
+    env_file:
+      - ./.env
+  backend:
+    image: m4rkerb/foodgram:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - static_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - frontend
+      - backend
+
+volumes:
+  dbdata:
+  static_value:
+  media_value:
