--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,24 @@
 server {
     listen 80;
+    server_name 127.0.0.1 localhost;
+    location /static/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+    location /static/admin {
+        root /var/html;
+    }
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -15,7 +34,8 @@ server {
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
-        root   /var/html/frontend/;
+        root /var/html/frontend/;
       }
+    server_tokens off;
 
 }
