--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,9 +10,7 @@ services:
       - ./.env
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: m4rkerb/foodgram:latest
     restart: always
     volumes:
       - static_value:/app/static/
