--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server { 
     listen 80; 
-    server_name 127.0.0.1 localhost; 
+    server_name 127.0.0.1 localhost 158.160.37.167; 
  
     location /media/ { 
         root /var/html/; 
