--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -27,6 +27,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
   
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
