--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 ignore =
-    W503, R504, R504
+    W503, R503, R504
 exclude =
     tests/,
     */migrations/,
@@ -9,4 +9,6 @@ exclude =
     settings.py
 per-file-ignores =
     */settings.py:E501
+    */api/views.py:I004
+    */api/views.py:I001
 max_line_length = 85
