--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,10 @@ exclude =
     env/
     settings.py
 per-file-ignores =
-    */settings.py:E501
-    */api/views.py:I004
-    */api/views.py:I001
+    */settings.py:E501,
+    */api/views.py:I004,
+    */api/views.py:I001,
+    */api/serializers.py:I001,
+    */api/serializers.py:I004
+    
 max_line_length = 85
