--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,6 @@ per-file-ignores =
     */api/views.py:I004,
     */api/views.py:I001,
     */api/serializers.py:I001,
-    */api/serializers.py:I004
+    */api/serializers.py:I004,
     
 max_line_length = 85
