--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 Django==3.1.4
 django-templated-mail==1.1.1
 django-utils-six==2.0
+django-filter==21.1
 djangorestframework==3.14.0
 djoser==2.0.1
 drf-extra-fields==3.4.1
@@ -11,5 +12,4 @@ isort==5.11.4
 Pillow==9.4.0
 psycopg2-binary==2.8.6
 python-dotenv==0.21.1
-pytz==2022.7
 sqlparse==0.4.3
