--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ Django==3.1.4
 django-templated-mail==1.1.1
 django-utils-six==2.0
 djangorestframework==3.14.0
+django-filter==21.1
 djoser==2.0.1
 drf-extra-fields==3.4.1
 gunicorn==20.0.4
